--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,14 @@ repositories {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
     implementation 'com.alibaba:fastjson:1.2.78'
-    compileOnly fileTree(dir:'libs' ,include:['*.jar'])
+    implementation 'org.ow2.asm:asm:9.2'
 }
 
 def targetJavaVersion = 8
@@ -38,10 +42,6 @@ tasks.withType(JavaCompile).configureEach {
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         options.release = targetJavaVersion
     }
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
 }
 
 processResources {
